--- a/order.html
+++ b/order.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="container">
         <h2>Enter your email to check your order(s)</h2>
-        <form>
+        <form action="user_home.html">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <button type="submit">Submit</button>
