--- a/order.html
+++ b/order.html
@@ -47,10 +47,10 @@
     </nav>
     <div class="container">
         <h2>Enter your email to check your order(s)</h2>
-        <form action="user_home.html">
+        <form action="http://127.0.0.1:8000/viewOrderInfo">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-            <button type="submit">Submit</button>
+            <button type="submit" id="check-order">Submit</button>
         </form>
     </div>
     <!-- wrap image inside container to center -->
@@ -58,4 +58,15 @@
         <img src="https://static.vecteezy.com/system/resources/thumbnails/005/299/616/small_2x/continuous-line-drawing-of-flying-airplane-single-one-line-art-of-jet-plane-aero-modeling-remote-control-illustration-free-vector.jpg">
     </div>
 </body>
+
+<script>
+    document.getElementById("check-order").addEventListener("click", async function(e) {
+        //e.preventDefault();
+        await fetch('http://127.0.0.1:8000/viewOrderInfo', {
+            method: "GET"
+        })
+
+        
+    })
+</script>
 </html>
